test/files/ill-typed/for_loop_reverse_range.lam
for x in [1..0] do
    1+x